# vehicule-autonome

./: LICENSE  README.md  README_CAMERA.txt  test.py  test_finale.py
limo_autonomous/: CMakeLists.txt  README.md  package.xml
limo_autonomous/config/: controller_params.yaml
limo_autonomous/launch/: autonomous.launch  controller_only.launch  rqt_plot.launch  supervisor.launch
limo_autonomous/rviz/: limo_full.rviz
limo_autonomous/scripts/: controller_node.py  obstacle_avoidance_node.py  rviz_helper_node.py  send_goal.py  simulation_standalone.py  supervisor_gui.py
limo_parking/scripts/: test_finale_yaz.py
