<?xml version="1.0"?>
<package format="2">
  <name>limo_autonomous</name>
  <version>1.1.0</version>
  <description>
    Package de commande autonome pour le robot Agilex Limo.
    Inclut détection d'obstacles via LiDAR et configuration RViz.
    Compatible ROS Melodic / Python 2.7
    Bureau d'etude ENSEM - Février 2026
  </description>

  <maintainer email="etudiant@ensem.fr">Bureau d'etude ENSEM</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>

</package>
